<resources>
    <string name="app_name">Food Shazam</string>
    <string name="welcomeMsg">Give me a picture and i\'ll find the food</string>
    <string name="cameraButton">Camera</string>
    <string name="galleryButton">Gallery</string>
    <string name="filler_image">Fills the space until an image is given</string>
    <string name="wsData"></string>
    <string name="recipe">Recipe</string>
</resources>
